1.6.0.1/Home.md
Prestashop 1.6.0.1 API documentation
==========================================

Source : https://github.com/PrestaShop/PrestaShop/tree/1.6.0.1

Contents
--------

* [Interfaces](#interfaces)
* [Classes](#classes)
* [Functions](#functions)
* [Files](#files)

<a name="interfaces"></a>Interfaces
----------

* [ITreeToolbarButtonCore](interface.ITreeToolbarButtonCore.md)
* [ITreeToolbarCore](interface.ITreeToolbarCore.md)
* [StockManagerInterface](interface.StockManagerInterface.md)
* [TaxManagerInterface](interface.TaxManagerInterface.md)
* [WebserviceOutputInterface](interface.WebserviceOutputInterface.md)
* [WebserviceSpecificManagementInterface](interface.WebserviceSpecificManagementInterface.md)

<a name="classes"></a>Classes
-------

* [AbstractLoggerCore](class.AbstractLoggerCore.md)
* [AddressControllerCore](class.AddressControllerCore.md)
* [AddressCore](class.AddressCore.md)
* [AddressFormatCore](class.AddressFormatCore.md)
* [AddressesControllerCore](class.AddressesControllerCore.md)
* [AdminAccessControllerCore](class.AdminAccessControllerCore.md)
* [AdminAddonsCatalogControllerCore](class.AdminAddonsCatalogControllerCore.md)
* [AdminAddressesControllerCore](class.AdminAddressesControllerCore.md)
* [AdminAdminPreferencesControllerCore](class.AdminAdminPreferencesControllerCore.md)
* [AdminAttachmentsControllerCore](class.AdminAttachmentsControllerCore.md)
* [AdminAttributeGeneratorControllerCore](class.AdminAttributeGeneratorControllerCore.md)
* [AdminAttributesGroupsControllerCore](class.AdminAttributesGroupsControllerCore.md)
* [AdminBackupControllerCore](class.AdminBackupControllerCore.md)
* [AdminCarrierWizardControllerCore](class.AdminCarrierWizardControllerCore.md)
* [AdminCarriersControllerCore](class.AdminCarriersControllerCore.md)
* [AdminCartRulesControllerCore](class.AdminCartRulesControllerCore.md)
* [AdminCartsControllerCore](class.AdminCartsControllerCore.md)
* [AdminCategoriesControllerCore](class.AdminCategoriesControllerCore.md)
* [AdminCmsCategoriesControllerCore](class.AdminCmsCategoriesControllerCore.md)
* [AdminCmsContentControllerCore](class.AdminCmsContentControllerCore.md)
* [AdminCmsControllerCore](class.AdminCmsControllerCore.md)
* [AdminContactsControllerCore](class.AdminContactsControllerCore.md)
* [AdminControllerCore](class.AdminControllerCore.md)
* [AdminCountriesControllerCore](class.AdminCountriesControllerCore.md)
* [AdminCurrenciesControllerCore](class.AdminCurrenciesControllerCore.md)
* [AdminCustomerPreferencesControllerCore](class.AdminCustomerPreferencesControllerCore.md)
* [AdminCustomerThreadsControllerCore](class.AdminCustomerThreadsControllerCore.md)
* [AdminCustomersControllerCore](class.AdminCustomersControllerCore.md)
* [AdminDashboardControllerCore](class.AdminDashboardControllerCore.md)
* [AdminDeliverySlipControllerCore](class.AdminDeliverySlipControllerCore.md)
* [AdminEmailsControllerCore](class.AdminEmailsControllerCore.md)
* [AdminEmployeesControllerCore](class.AdminEmployeesControllerCore.md)
* [AdminFeaturesControllerCore](class.AdminFeaturesControllerCore.md)
* [AdminGendersControllerCore](class.AdminGendersControllerCore.md)
* [AdminGeolocationControllerCore](class.AdminGeolocationControllerCore.md)
* [AdminGroupsControllerCore](class.AdminGroupsControllerCore.md)
* [AdminHomeControllerCore](class.AdminHomeControllerCore.md)
* [AdminImagesControllerCore](class.AdminImagesControllerCore.md)
* [AdminImportControllerCore](class.AdminImportControllerCore.md)
* [AdminInformationControllerCore](class.AdminInformationControllerCore.md)
* [AdminInvoicesControllerCore](class.AdminInvoicesControllerCore.md)
* [AdminLanguagesControllerCore](class.AdminLanguagesControllerCore.md)
* [AdminLocalizationControllerCore](class.AdminLocalizationControllerCore.md)
* [AdminLoginControllerCore](class.AdminLoginControllerCore.md)
* [AdminLogsControllerCore](class.AdminLogsControllerCore.md)
* [AdminMaintenanceControllerCore](class.AdminMaintenanceControllerCore.md)
* [AdminManufacturersControllerCore](class.AdminManufacturersControllerCore.md)
* [AdminMarketingControllerCore](class.AdminMarketingControllerCore.md)
* [AdminMetaControllerCore](class.AdminMetaControllerCore.md)
* [AdminModulesControllerCore](class.AdminModulesControllerCore.md)
* [AdminModulesPositionsControllerCore](class.AdminModulesPositionsControllerCore.md)
* [AdminNotFoundControllerCore](class.AdminNotFoundControllerCore.md)
* [AdminOrderMessageControllerCore](class.AdminOrderMessageControllerCore.md)
* [AdminOrderPreferencesControllerCore](class.AdminOrderPreferencesControllerCore.md)
* [AdminOrdersControllerCore](class.AdminOrdersControllerCore.md)
* [AdminOutstandingControllerCore](class.AdminOutstandingControllerCore.md)
* [AdminPPreferencesControllerCore](class.AdminPPreferencesControllerCore.md)
* [AdminPaymentControllerCore](class.AdminPaymentControllerCore.md)
* [AdminPdfControllerCore](class.AdminPdfControllerCore.md)
* [AdminPerformanceControllerCore](class.AdminPerformanceControllerCore.md)
* [AdminPreferencesControllerCore](class.AdminPreferencesControllerCore.md)
* [AdminProductsControllerCore](class.AdminProductsControllerCore.md)
* [AdminProfilesControllerCore](class.AdminProfilesControllerCore.md)
* [AdminQuickAccessesControllerCore](class.AdminQuickAccessesControllerCore.md)
* [AdminRangePriceControllerCore](class.AdminRangePriceControllerCore.md)
* [AdminRangeWeightControllerCore](class.AdminRangeWeightControllerCore.md)
* [AdminReferrersControllerCore](class.AdminReferrersControllerCore.md)
* [AdminRequestSqlControllerCore](class.AdminRequestSqlControllerCore.md)
* [AdminReturnControllerCore](class.AdminReturnControllerCore.md)
* [AdminScenesControllerCore](class.AdminScenesControllerCore.md)
* [AdminSearchConfControllerCore](class.AdminSearchConfControllerCore.md)
* [AdminSearchControllerCore](class.AdminSearchControllerCore.md)
* [AdminSearchEnginesControllerCore](class.AdminSearchEnginesControllerCore.md)
* [AdminShippingControllerCore](class.AdminShippingControllerCore.md)
* [AdminShopControllerCore](class.AdminShopControllerCore.md)
* [AdminShopGroupControllerCore](class.AdminShopGroupControllerCore.md)
* [AdminShopUrlControllerCore](class.AdminShopUrlControllerCore.md)
* [AdminSlipControllerCore](class.AdminSlipControllerCore.md)
* [AdminSpecificPriceRuleControllerCore](class.AdminSpecificPriceRuleControllerCore.md)
* [AdminStatesControllerCore](class.AdminStatesControllerCore.md)
* [AdminStatsControllerCore](class.AdminStatsControllerCore.md)
* [AdminStatsTabControllerCore](class.AdminStatsTabControllerCore.md)
* [AdminStatusesControllerCore](class.AdminStatusesControllerCore.md)
* [AdminStockConfigurationControllerCore](class.AdminStockConfigurationControllerCore.md)
* [AdminStockCoverControllerCore](class.AdminStockCoverControllerCore.md)
* [AdminStockInstantStateControllerCore](class.AdminStockInstantStateControllerCore.md)
* [AdminStockManagementControllerCore](class.AdminStockManagementControllerCore.md)
* [AdminStockMvtControllerCore](class.AdminStockMvtControllerCore.md)
* [AdminStoresControllerCore](class.AdminStoresControllerCore.md)
* [AdminSuppliersControllerCore](class.AdminSuppliersControllerCore.md)
* [AdminSupplyOrdersControllerCore](class.AdminSupplyOrdersControllerCore.md)
* [AdminTabCore](class.AdminTabCore.md)
* [AdminTabsControllerCore](class.AdminTabsControllerCore.md)
* [AdminTagsControllerCore](class.AdminTagsControllerCore.md)
* [AdminTaxRulesGroupControllerCore](class.AdminTaxRulesGroupControllerCore.md)
* [AdminTaxesControllerCore](class.AdminTaxesControllerCore.md)
* [AdminThemesControllerCore](class.AdminThemesControllerCore.md)
* [AdminTrackingControllerCore](class.AdminTrackingControllerCore.md)
* [AdminTranslationsControllerCore](class.AdminTranslationsControllerCore.md)
* [AdminWarehousesControllerCore](class.AdminWarehousesControllerCore.md)
* [AdminWebserviceControllerCore](class.AdminWebserviceControllerCore.md)
* [AdminZonesControllerCore](class.AdminZonesControllerCore.md)
* [AliasCore](class.AliasCore.md)
* [AttachmentControllerCore](class.AttachmentControllerCore.md)
* [AttachmentCore](class.AttachmentCore.md)
* [AttributeCore](class.AttributeCore.md)
* [AttributeGroupCore](class.AttributeGroupCore.md)
* [Auth](class.Auth.md)
* [AuthControllerCore](class.AuthControllerCore.md)
* [Autoload](class.Autoload.md)
* [BackupCore](class.BackupCore.md)
* [BestSalesControllerCore](class.BestSalesControllerCore.md)
* [BlowfishCore](class.BlowfishCore.md)
* [CMSCategoryCore](class.CMSCategoryCore.md)
* [CMSCore](class.CMSCore.md)
* [CSVCore](class.CSVCore.md)
* [CarrierCore](class.CarrierCore.md)
* [CarrierModuleCore](class.CarrierModuleCore.md)
* [CartControllerCore](class.CartControllerCore.md)
* [CartCore](class.CartCore.md)
* [CartRuleCore](class.CartRuleCore.md)
* [CategoryControllerCore](class.CategoryControllerCore.md)
* [CategoryCore](class.CategoryCore.md)
* [ChangeCurrencyControllerCore](class.ChangeCurrencyControllerCore.md)
* [ChartCore](class.ChartCore.md)
* [CmsControllerCore](class.CmsControllerCore.md)
* [CollectionCore](class.CollectionCore.md)
* [CombinationCore](class.CombinationCore.md)
* [CompareControllerCore](class.CompareControllerCore.md)
* [CompareProductCore](class.CompareProductCore.md)
* [ConfigurationCore](class.ConfigurationCore.md)
* [ConfigurationKPICore](class.ConfigurationKPICore.md)
* [ConfigurationTestCore](class.ConfigurationTestCore.md)
* [ConnectionCore](class.ConnectionCore.md)
* [ConnectionsSourceCore](class.ConnectionsSourceCore.md)
* [ContactControllerCore](class.ContactControllerCore.md)
* [ContactCore](class.ContactCore.md)
* [ContextCore](class.ContextCore.md)
* [ControllerCore](class.ControllerCore.md)
* [ControllerFactoryCore](class.ControllerFactoryCore.md)
* [CookieCore](class.CookieCore.md)
* [CountryCore](class.CountryCore.md)
* [CountyCore](class.CountyCore.md)
* [Crypt_Blowfish](class.Crypt_Blowfish.md)
* [CurrencyCore](class.CurrencyCore.md)
* [Curve](class.Curve.md)
* [CustomerCore](class.CustomerCore.md)
* [CustomerMessageCore](class.CustomerMessageCore.md)
* [CustomerThreadCore](class.CustomerThreadCore.md)
* [CustomizationCore](class.CustomizationCore.md)
* [DateRangeCore](class.DateRangeCore.md)
* [DbCore](class.DbCore.md)
* [DbMySQLiCore](class.DbMySQLiCore.md)
* [DbPDOCore](class.DbPDOCore.md)
* [DbQueryCore](class.DbQueryCore.md)
* [DeliveryCore](class.DeliveryCore.md)
* [DiscountControllerCore](class.DiscountControllerCore.md)
* [DiscountCore](class.DiscountCore.md)
* [DispatcherCore](class.DispatcherCore.md)
* [EmployeeCore](class.EmployeeCore.md)
* [FeatureCore](class.FeatureCore.md)
* [FeatureValueCore](class.FeatureValueCore.md)
* [FileLoggerCore](class.FileLoggerCore.md)
* [FileUploaderCore](class.FileUploaderCore.md)
* [FreeOrder](class.FreeOrder.md)
* [FrontControllerCore](class.FrontControllerCore.md)
* [GenderCore](class.GenderCore.md)
* [GetFileControllerCore](class.GetFileControllerCore.md)
* [GroupCore](class.GroupCore.md)
* [GroupReductionCore](class.GroupReductionCore.md)
* [GuestCore](class.GuestCore.md)
* [GuestTrackingControllerCore](class.GuestTrackingControllerCore.md)
* [HTMLTemplateCore](class.HTMLTemplateCore.md)
* [HTMLTemplateDeliverySlipCore](class.HTMLTemplateDeliverySlipCore.md)
* [HTMLTemplateInvoiceCore](class.HTMLTemplateInvoiceCore.md)
* [HTMLTemplateOrderReturnCore](class.HTMLTemplateOrderReturnCore.md)
* [HTMLTemplateOrderSlipCore](class.HTMLTemplateOrderSlipCore.md)
* [HTMLTemplateSupplyOrderFormCore](class.HTMLTemplateSupplyOrderFormCore.md)
* [HelpAccessCore](class.HelpAccessCore.md)
* [HelperCalendarCore](class.HelperCalendarCore.md)
* [HelperCore](class.HelperCore.md)
* [HelperFormCore](class.HelperFormCore.md)
* [HelperHelpAccessCore](class.HelperHelpAccessCore.md)
* [HelperImageUploaderCore](class.HelperImageUploaderCore.md)
* [HelperKpiCore](class.HelperKpiCore.md)
* [HelperKpiRowCore](class.HelperKpiRowCore.md)
* [HelperListCore](class.HelperListCore.md)
* [HelperOptionsCore](class.HelperOptionsCore.md)
* [HelperTreeCategoriesCore](class.HelperTreeCategoriesCore.md)
* [HelperTreeShopsCore](class.HelperTreeShopsCore.md)
* [HelperUploaderCore](class.HelperUploaderCore.md)
* [HelperViewCore](class.HelperViewCore.md)
* [History](class.History.md)
* [HistoryControllerCore](class.HistoryControllerCore.md)
* [HookCore](class.HookCore.md)
* [IdentityControllerCore](class.IdentityControllerCore.md)
* [Image](class.Image.md)
* [ImageCore](class.ImageCore.md)
* [ImageManagerCore](class.ImageManagerCore.md)
* [ImageTypeCore](class.ImageTypeCore.md)
* [ImportModuleCore](class.ImportModuleCore.md)
* [IndexControllerCore](class.IndexControllerCore.md)
* [LanguageCore](class.LanguageCore.md)
* [LinkCore](class.LinkCore.md)
* [LocalizationPackCore](class.LocalizationPackCore.md)
* [LoggerCore](class.LoggerCore.md)
* [MailCore](class.MailCore.md)
* [ManufacturerControllerCore](class.ManufacturerControllerCore.md)
* [ManufacturerCore](class.ManufacturerCore.md)
* [MediaCore](class.MediaCore.md)
* [MessageCore](class.MessageCore.md)
* [MetaCore](class.MetaCore.md)
* [ModuleAdminControllerCore](class.ModuleAdminControllerCore.md)
* [ModuleCore](class.ModuleCore.md)
* [ModuleFrontControllerCore](class.ModuleFrontControllerCore.md)
* [ModuleGraphCore](class.ModuleGraphCore.md)
* [ModuleGraphEngineCore](class.ModuleGraphEngineCore.md)
* [ModuleGridCore](class.ModuleGridCore.md)
* [ModuleGridEngineCore](class.ModuleGridEngineCore.md)
* [MyAccountControllerCore](class.MyAccountControllerCore.md)
* [MySQLCore](class.MySQLCore.md)
* [NewProductsControllerCore](class.NewProductsControllerCore.md)
* [NotificationCore](class.NotificationCore.md)
* [ObjectModelCore](class.ObjectModelCore.md)
* [OrderCarrierCore](class.OrderCarrierCore.md)
* [OrderCartRuleCore](class.OrderCartRuleCore.md)
* [OrderConfirmationControllerCore](class.OrderConfirmationControllerCore.md)
* [OrderControllerCore](class.OrderControllerCore.md)
* [OrderCore](class.OrderCore.md)
* [OrderDetailControllerCore](class.OrderDetailControllerCore.md)
* [OrderDetailCore](class.OrderDetailCore.md)
* [OrderDiscountCore](class.OrderDiscountCore.md)
* [OrderFollowControllerCore](class.OrderFollowControllerCore.md)
* [OrderHistoryCore](class.OrderHistoryCore.md)
* [OrderInvoiceCore](class.OrderInvoiceCore.md)
* [OrderMessageCore](class.OrderMessageCore.md)
* [OrderOpcControllerCore](class.OrderOpcControllerCore.md)
* [OrderPaymentCore](class.OrderPaymentCore.md)
* [OrderReturnControllerCore](class.OrderReturnControllerCore.md)
* [OrderReturnCore](class.OrderReturnCore.md)
* [OrderReturnStateCore](class.OrderReturnStateCore.md)
* [OrderSlipControllerCore](class.OrderSlipControllerCore.md)
* [OrderSlipCore](class.OrderSlipCore.md)
* [OrderStateCore](class.OrderStateCore.md)
* [PDFCore](class.PDFCore.md)
* [PDFGeneratorCore](class.PDFGeneratorCore.md)
* [PackCore](class.PackCore.md)
* [PageCore](class.PageCore.md)
* [PageNotFoundControllerCore](class.PageNotFoundControllerCore.md)
* [ParentOrderControllerCore](class.ParentOrderControllerCore.md)
* [PasswordControllerCore](class.PasswordControllerCore.md)
* [PaymentCCCore](class.PaymentCCCore.md)
* [PaymentModuleCore](class.PaymentModuleCore.md)
* [PdfInvoiceControllerCore](class.PdfInvoiceControllerCore.md)
* [PdfOrderReturnControllerCore](class.PdfOrderReturnControllerCore.md)
* [PdfOrderSlipControllerCore](class.PdfOrderSlipControllerCore.md)
* [PrestaShopDatabaseExceptionCore](class.PrestaShopDatabaseExceptionCore.md)
* [PrestaShopExceptionCore](class.PrestaShopExceptionCore.md)
* [PrestaShopModuleExceptionCore](class.PrestaShopModuleExceptionCore.md)
* [PrestaShopPaymentExceptionCore](class.PrestaShopPaymentExceptionCore.md)
* [PricesDropControllerCore](class.PricesDropControllerCore.md)
* [ProductControllerCore](class.ProductControllerCore.md)
* [ProductCore](class.ProductCore.md)
* [ProductDownloadCore](class.ProductDownloadCore.md)
* [ProductSaleCore](class.ProductSaleCore.md)
* [ProductSupplierCore](class.ProductSupplierCore.md)
* [ProfileCore](class.ProfileCore.md)
* [QqUploadedFileForm](class.QqUploadedFileForm.md)
* [QqUploadedFileXhr](class.QqUploadedFileXhr.md)
* [QuickAccessCore](class.QuickAccessCore.md)
* [RangePriceCore](class.RangePriceCore.md)
* [RangeWeightCore](class.RangeWeightCore.md)
* [ReferrerCore](class.ReferrerCore.md)
* [RequestSqlCore](class.RequestSqlCore.md)
* [RijndaelCore](class.RijndaelCore.md)
* [RiskCore](class.RiskCore.md)
* [SceneCore](class.SceneCore.md)
* [Search](class.Search.md)
* [SearchControllerCore](class.SearchControllerCore.md)
* [SearchCore](class.SearchCore.md)
* [SearchEngineCore](class.SearchEngineCore.md)
* [Session](class.Session.md)
* [SessionAction](class.SessionAction.md)
* [ShopCore](class.ShopCore.md)
* [ShopGroupCore](class.ShopGroupCore.md)
* [ShopUrlCore](class.ShopUrlCore.md)
* [SitemapControllerCore](class.SitemapControllerCore.md)
* [SmartyLazyRegister](class.SmartyLazyRegister.md)
* [SpecificPriceCore](class.SpecificPriceCore.md)
* [SpecificPriceRuleCore](class.SpecificPriceRuleCore.md)
* [StateCore](class.StateCore.md)
* [StatisticsControllerCore](class.StatisticsControllerCore.md)
* [StockAvailableCore](class.StockAvailableCore.md)
* [StockCore](class.StockCore.md)
* [StockManagerCore](class.StockManagerCore.md)
* [StockManagerFactoryCore](class.StockManagerFactoryCore.md)
* [StockManagerModuleCore](class.StockManagerModuleCore.md)
* [StockMvtCore](class.StockMvtCore.md)
* [StockMvtReasonCore](class.StockMvtReasonCore.md)
* [StockMvtWSCore](class.StockMvtWSCore.md)
* [StoreCore](class.StoreCore.md)
* [StoresControllerCore](class.StoresControllerCore.md)
* [SupplierControllerCore](class.SupplierControllerCore.md)
* [SupplierCore](class.SupplierCore.md)
* [SupplyOrderCore](class.SupplyOrderCore.md)
* [SupplyOrderDetailCore](class.SupplyOrderDetailCore.md)
* [SupplyOrderHistoryCore](class.SupplyOrderHistoryCore.md)
* [SupplyOrderReceiptHistoryCore](class.SupplyOrderReceiptHistoryCore.md)
* [SupplyOrderStateCore](class.SupplyOrderStateCore.md)
* [TabCore](class.TabCore.md)
* [TagCore](class.TagCore.md)
* [TaxCalculatorCore](class.TaxCalculatorCore.md)
* [TaxCore](class.TaxCore.md)
* [TaxManagerFactoryCore](class.TaxManagerFactoryCore.md)
* [TaxManagerModuleCore](class.TaxManagerModuleCore.md)
* [TaxRuleCore](class.TaxRuleCore.md)
* [TaxRulesGroupCore](class.TaxRulesGroupCore.md)
* [TaxRulesTaxManagerCore](class.TaxRulesTaxManagerCore.md)
* [ThemeCore](class.ThemeCore.md)
* [ToolsCore](class.ToolsCore.md)
* [TranslateCore](class.TranslateCore.md)
* [TranslatedConfigurationCore](class.TranslatedConfigurationCore.md)
* [TreeCore](class.TreeCore.md)
* [TreeToolbarButtonCore](class.TreeToolbarButtonCore.md)
* [TreeToolbarCore](class.TreeToolbarCore.md)
* [TreeToolbarLinkCore](class.TreeToolbarLinkCore.md)
* [TreeToolbarSearchCategoriesCore](class.TreeToolbarSearchCategoriesCore.md)
* [TreeToolbarSearchCore](class.TreeToolbarSearchCore.md)
* [UpgraderCore](class.UpgraderCore.md)
* [Upload](class.Upload.md)
* [UploaderCore](class.UploaderCore.md)
* [ValidateCore](class.ValidateCore.md)
* [WarehouseCore](class.WarehouseCore.md)
* [WarehouseProductLocationCore](class.WarehouseProductLocationCore.md)
* [WebserviceExceptionCore](class.WebserviceExceptionCore.md)
* [WebserviceKeyCore](class.WebserviceKeyCore.md)
* [WebserviceOutputBuilderCore](class.WebserviceOutputBuilderCore.md)
* [WebserviceOutputXMLCore](class.WebserviceOutputXMLCore.md)
* [WebserviceRequestCore](class.WebserviceRequestCore.md)
* [WebserviceSpecificManagementImagesCore](class.WebserviceSpecificManagementImagesCore.md)
* [WebserviceSpecificManagementSearchCore](class.WebserviceSpecificManagementSearchCore.md)
* [ZoneCore](class.ZoneCore.md)
* [file](class.file.md)
* [manager](class.manager.md)
* [pagination](class.pagination.md)

<a name="functions"></a>Functions
---------

* [addBeginingSlash](function.addBeginingSlash.md)
* [addNoCacheHeaders](function.addNoCacheHeaders.md)
* [addTrailingSlash](function.addTrailingSlash.md)
* [appendQueryString](function.appendQueryString.md)
* [backslashToSlash](function.backslashToSlash.md)
* [bindDatepicker](function.bindDatepicker.md)
* [bqSQL](function.bqSQL.md)
* [cacheImage](function.cacheImage.md)
* [checkIco](function.checkIco.md)
* [checkImage](function.checkImage.md)
* [checkImageUploadError](function.checkImageUploadError.md)
* [checkPSVersion](function.checkPSVersion.md)
* [checkTabRights](function.checkTabRights.md)
* [checkingTab](function.checkingTab.md)
* [cmpPriceAsc](function.cmpPriceAsc.md)
* [cmpPriceDesc](function.cmpPriceDesc.md)
* [createDestImage](function.createDestImage.md)
* [createDir](function.createDir.md)
* [createSrcImage](function.createSrcImage.md)
* [d](function.d.md)
* [ddd](function.ddd.md)
* [deleteImage](function.deleteImage.md)
* [displayArray](function.displayArray.md)
* [displayDate](function.displayDate.md)
* [displayFatalError](function.displayFatalError.md)
* [downloadFile](function.downloadFile.md)
* [fd](function.fd.md)
* [getAbsPath](function.getAbsPath.md)
* [getBaseName](function.getBaseName.md)
* [getCurrentFolderPath](function.getCurrentFolderPath.md)
* [getCurrentUrl](function.getCurrentUrl.md)
* [getDirContent](function.getDirContent.md)
* [getFileContent](function.getFileContent.md)
* [getFileExt](function.getFileExt.md)
* [getFileUrl](function.getFileUrl.md)
* [getFolderListing](function.getFolderListing.md)
* [getMemoryLimit](function.getMemoryLimit.md)
* [getParentFolderPath](function.getParentFolderPath.md)
* [getParentPath](function.getParentPath.md)
* [getPath](function.getPath.md)
* [getRealPath](function.getRealPath.md)
* [getRelativeFileUrl](function.getRelativeFileUrl.md)
* [getRelativePath](function.getRelativePath.md)
* [getRootPath](function.getRootPath.md)
* [getThumbWidthHeight](function.getThumbWidthHeight.md)
* [getValidTextEditorExts](function.getValidTextEditorExts.md)
* [imageCut](function.imageCut.md)
* [imageResize](function.imageResize.md)
* [imagerotate](function.imagerotate.md)
* [includeDatepicker](function.includeDatepicker.md)
* [isInvalidPattern](function.isInvalidPattern.md)
* [isListingDocument](function.isListingDocument.md)
* [isPicture](function.isPicture.md)
* [isUnderRoot](function.isUnderRoot.md)
* [isUnderSession](function.isUnderSession.md)
* [isValidExt](function.isValidExt.md)
* [isValidPattern](function.isValidPattern.md)
* [makeQueryString](function.makeQueryString.md)
* [mime_content_type](function.mime_content_type.md)
* [myRealPath](function.myRealPath.md)
* [nl2br2](function.nl2br2.md)
* [p](function.p.md)
* [pSQL](function.pSQL.md)
* [ppp](function.ppp.md)
* [prependSlash](function.prependSlash.md)
* [ps_module_version_sort](function.ps_module_version_sort.md)
* [relToAbs](function.relToAbs.md)
* [removeBeginingSlash](function.removeBeginingSlash.md)
* [removeTrailingSlash](function.removeTrailingSlash.md)
* [returnDestImage](function.returnDestImage.md)
* [rewriteSettingsFile](function.rewriteSettingsFile.md)
* [runAdminTab](function.runAdminTab.md)
* [secureFileName](function.secureFileName.md)
* [shortenFileName](function.shortenFileName.md)
* [simpleXMLToArray](function.simpleXMLToArray.md)
* [slashToBackslash](function.slashToBackslash.md)
* [smartyDieObject](function.smartyDieObject.md)
* [smartyHook](function.smartyHook.md)
* [smartyMaxWords](function.smartyMaxWords.md)
* [smartyMinifyHTML](function.smartyMinifyHTML.md)
* [smartyPackJSinHTML](function.smartyPackJSinHTML.md)
* [smartyRegisterFunction](function.smartyRegisterFunction.md)
* [smartyShowObject](function.smartyShowObject.md)
* [smartyTranslate](function.smartyTranslate.md)
* [smartyTruncate](function.smartyTruncate.md)
* [smarty_modifier_htmlentitiesUTF8](function.smarty_modifier_htmlentitiesUTF8.md)
* [smarty_modifier_truncate](function.smarty_modifier_truncate.md)
* [sortDocuments](function.sortDocuments.md)
* [stripos](function.stripos.md)
* [toolsConvertPrice](function.toolsConvertPrice.md)
* [transformFilePath](function.transformFilePath.md)
* [transformFileSize](function.transformFileSize.md)
* [translate](function.translate.md)
* [trimlrm](function.trimlrm.md)
* [writeInfo](function.writeInfo.md)

<a name="files"></a>Files
-----

* [admin-dev/ajaxfilemanager/inc/class.auth.php](file.admin-dev-ajaxfilemanager-inc-class.auth.php.md)
* [admin-dev/ajaxfilemanager/inc/class.file.php](file.admin-dev-ajaxfilemanager-inc-class.file.php.md)
* [admin-dev/ajaxfilemanager/inc/class.history.php](file.admin-dev-ajaxfilemanager-inc-class.history.php.md)
* [admin-dev/ajaxfilemanager/inc/class.image.php](file.admin-dev-ajaxfilemanager-inc-class.image.php.md)
* [admin-dev/ajaxfilemanager/inc/class.manager.php](file.admin-dev-ajaxfilemanager-inc-class.manager.php.md)
* [admin-dev/ajaxfilemanager/inc/class.pagination.php](file.admin-dev-ajaxfilemanager-inc-class.pagination.php.md)
* [admin-dev/ajaxfilemanager/inc/class.search.php](file.admin-dev-ajaxfilemanager-inc-class.search.php.md)
* [admin-dev/ajaxfilemanager/inc/class.session.php](file.admin-dev-ajaxfilemanager-inc-class.session.php.md)
* [admin-dev/ajaxfilemanager/inc/class.sessionaction.php](file.admin-dev-ajaxfilemanager-inc-class.sessionaction.php.md)
* [admin-dev/ajaxfilemanager/inc/class.upload.php](file.admin-dev-ajaxfilemanager-inc-class.upload.php.md)
* [admin-dev/ajaxfilemanager/inc/config.php](file.admin-dev-ajaxfilemanager-inc-config.php.md)
* [admin-dev/ajaxfilemanager/inc/function.base.php](file.admin-dev-ajaxfilemanager-inc-function.base.php.md)
* [admin-dev/functions.php](file.admin-dev-functions.php.md)
* [classes/Address.php](file.classes-Address.php.md)
* [classes/AddressFormat.php](file.classes-AddressFormat.php.md)
* [classes/AdminTab.php](file.classes-AdminTab.php.md)
* [classes/Alias.php](file.classes-Alias.php.md)
* [classes/Attachment.php](file.classes-Attachment.php.md)
* [classes/Attribute.php](file.classes-Attribute.php.md)
* [classes/AttributeGroup.php](file.classes-AttributeGroup.php.md)
* [classes/Autoload.php](file.classes-Autoload.php.md)
* [classes/Backup.php](file.classes-Backup.php.md)
* [classes/Blowfish.php](file.classes-Blowfish.php.md)
* [classes/CMS.php](file.classes-CMS.php.md)
* [classes/CMSCategory.php](file.classes-CMSCategory.php.md)
* [classes/CSV.php](file.classes-CSV.php.md)
* [classes/Carrier.php](file.classes-Carrier.php.md)
* [classes/Cart.php](file.classes-Cart.php.md)
* [classes/CartRule.php](file.classes-CartRule.php.md)
* [classes/Category.php](file.classes-Category.php.md)
* [classes/Chart.php](file.classes-Chart.php.md)
* [classes/Collection.php](file.classes-Collection.php.md)
* [classes/Combination.php](file.classes-Combination.php.md)
* [classes/CompareProduct.php](file.classes-CompareProduct.php.md)
* [classes/Configuration.php](file.classes-Configuration.php.md)
* [classes/ConfigurationKPI.php](file.classes-ConfigurationKPI.php.md)
* [classes/ConfigurationTest.php](file.classes-ConfigurationTest.php.md)
* [classes/Connection.php](file.classes-Connection.php.md)
* [classes/ConnectionsSource.php](file.classes-ConnectionsSource.php.md)
* [classes/Contact.php](file.classes-Contact.php.md)
* [classes/Context.php](file.classes-Context.php.md)
* [classes/ControllerFactory.php](file.classes-ControllerFactory.php.md)
* [classes/Cookie.php](file.classes-Cookie.php.md)
* [classes/Country.php](file.classes-Country.php.md)
* [classes/County.php](file.classes-County.php.md)
* [classes/Currency.php](file.classes-Currency.php.md)
* [classes/Customer.php](file.classes-Customer.php.md)
* [classes/CustomerMessage.php](file.classes-CustomerMessage.php.md)
* [classes/CustomerThread.php](file.classes-CustomerThread.php.md)
* [classes/Customization.php](file.classes-Customization.php.md)
* [classes/DateRange.php](file.classes-DateRange.php.md)
* [classes/Delivery.php](file.classes-Delivery.php.md)
* [classes/Discount.php](file.classes-Discount.php.md)
* [classes/Dispatcher.php](file.classes-Dispatcher.php.md)
* [classes/Employee.php](file.classes-Employee.php.md)
* [classes/Feature.php](file.classes-Feature.php.md)
* [classes/FeatureValue.php](file.classes-FeatureValue.php.md)
* [classes/FileUploader.php](file.classes-FileUploader.php.md)
* [classes/Gender.php](file.classes-Gender.php.md)
* [classes/Group.php](file.classes-Group.php.md)
* [classes/GroupReduction.php](file.classes-GroupReduction.php.md)
* [classes/Guest.php](file.classes-Guest.php.md)
* [classes/HelpAccess.php](file.classes-HelpAccess.php.md)
* [classes/Hook.php](file.classes-Hook.php.md)
* [classes/Image.php](file.classes-Image.php.md)
* [classes/ImageManager.php](file.classes-ImageManager.php.md)
* [classes/ImageType.php](file.classes-ImageType.php.md)
* [classes/Language.php](file.classes-Language.php.md)
* [classes/Link.php](file.classes-Link.php.md)
* [classes/LocalizationPack.php](file.classes-LocalizationPack.php.md)
* [classes/Logger.php](file.classes-Logger.php.md)
* [classes/Mail.php](file.classes-Mail.php.md)
* [classes/Manufacturer.php](file.classes-Manufacturer.php.md)
* [classes/Media.php](file.classes-Media.php.md)
* [classes/Message.php](file.classes-Message.php.md)
* [classes/Meta.php](file.classes-Meta.php.md)
* [classes/Notification.php](file.classes-Notification.php.md)
* [classes/ObjectModel.php](file.classes-ObjectModel.php.md)
* [classes/Pack.php](file.classes-Pack.php.md)
* [classes/Page.php](file.classes-Page.php.md)
* [classes/PaymentCC.php](file.classes-PaymentCC.php.md)
* [classes/PaymentModule.php](file.classes-PaymentModule.php.md)
* [classes/Product.php](file.classes-Product.php.md)
* [classes/ProductDownload.php](file.classes-ProductDownload.php.md)
* [classes/ProductSale.php](file.classes-ProductSale.php.md)
* [classes/ProductSupplier.php](file.classes-ProductSupplier.php.md)
* [classes/Profile.php](file.classes-Profile.php.md)
* [classes/QuickAccess.php](file.classes-QuickAccess.php.md)
* [classes/Referrer.php](file.classes-Referrer.php.md)
* [classes/RequestSql.php](file.classes-RequestSql.php.md)
* [classes/Rijndael.php](file.classes-Rijndael.php.md)
* [classes/Risk.php](file.classes-Risk.php.md)
* [classes/Scene.php](file.classes-Scene.php.md)
* [classes/Search.php](file.classes-Search.php.md)
* [classes/SearchEngine.php](file.classes-SearchEngine.php.md)
* [classes/SpecificPrice.php](file.classes-SpecificPrice.php.md)
* [classes/SpecificPriceRule.php](file.classes-SpecificPriceRule.php.md)
* [classes/State.php](file.classes-State.php.md)
* [classes/Store.php](file.classes-Store.php.md)
* [classes/Supplier.php](file.classes-Supplier.php.md)
* [classes/Tab.php](file.classes-Tab.php.md)
* [classes/Tag.php](file.classes-Tag.php.md)
* [classes/Theme.php](file.classes-Theme.php.md)
* [classes/Tools.php](file.classes-Tools.php.md)
* [classes/Translate.php](file.classes-Translate.php.md)
* [classes/TranslatedConfiguration.php](file.classes-TranslatedConfiguration.php.md)
* [classes/Upgrader.php](file.classes-Upgrader.php.md)
* [classes/Uploader.php](file.classes-Uploader.php.md)
* [classes/Validate.php](file.classes-Validate.php.md)
* [classes/Zone.php](file.classes-Zone.php.md)
* [classes/controller/AdminController.php](file.classes-controller-AdminController.php.md)
* [classes/controller/Controller.php](file.classes-controller-Controller.php.md)
* [classes/controller/FrontController.php](file.classes-controller-FrontController.php.md)
* [classes/controller/ModuleAdminController.php](file.classes-controller-ModuleAdminController.php.md)
* [classes/controller/ModuleFrontController.php](file.classes-controller-ModuleFrontController.php.md)
* [classes/db/Db.php](file.classes-db-Db.php.md)
* [classes/db/DbMySQLi.php](file.classes-db-DbMySQLi.php.md)
* [classes/db/DbPDO.php](file.classes-db-DbPDO.php.md)
* [classes/db/DbQuery.php](file.classes-db-DbQuery.php.md)
* [classes/db/MySQL.php](file.classes-db-MySQL.php.md)
* [classes/exception/PrestaShopDatabaseException.php](file.classes-exception-PrestaShopDatabaseException.php.md)
* [classes/exception/PrestaShopException.php](file.classes-exception-PrestaShopException.php.md)
* [classes/exception/PrestaShopModuleException.php](file.classes-exception-PrestaShopModuleException.php.md)
* [classes/exception/PrestaShopPaymentException.php](file.classes-exception-PrestaShopPaymentException.php.md)
* [classes/helper/Helper.php](file.classes-helper-Helper.php.md)
* [classes/helper/HelperCalendar.php](file.classes-helper-HelperCalendar.php.md)
* [classes/helper/HelperForm.php](file.classes-helper-HelperForm.php.md)
* [classes/helper/HelperHelpAccess.php](file.classes-helper-HelperHelpAccess.php.md)
* [classes/helper/HelperImageUploader.php](file.classes-helper-HelperImageUploader.php.md)
* [classes/helper/HelperKpi.php](file.classes-helper-HelperKpi.php.md)
* [classes/helper/HelperKpiRow.php](file.classes-helper-HelperKpiRow.php.md)
* [classes/helper/HelperList.php](file.classes-helper-HelperList.php.md)
* [classes/helper/HelperOptions.php](file.classes-helper-HelperOptions.php.md)
* [classes/helper/HelperTreeCategories.php](file.classes-helper-HelperTreeCategories.php.md)
* [classes/helper/HelperTreeShops.php](file.classes-helper-HelperTreeShops.php.md)
* [classes/helper/HelperUploader.php](file.classes-helper-HelperUploader.php.md)
* [classes/helper/HelperView.php](file.classes-helper-HelperView.php.md)
* [classes/log/AbstractLogger.php](file.classes-log-AbstractLogger.php.md)
* [classes/log/FileLogger.php](file.classes-log-FileLogger.php.md)
* [classes/module/CarrierModule.php](file.classes-module-CarrierModule.php.md)
* [classes/module/ImportModule.php](file.classes-module-ImportModule.php.md)
* [classes/module/Module.php](file.classes-module-Module.php.md)
* [classes/module/ModuleGraph.php](file.classes-module-ModuleGraph.php.md)
* [classes/module/ModuleGraphEngine.php](file.classes-module-ModuleGraphEngine.php.md)
* [classes/module/ModuleGrid.php](file.classes-module-ModuleGrid.php.md)
* [classes/module/ModuleGridEngine.php](file.classes-module-ModuleGridEngine.php.md)
* [classes/order/Order.php](file.classes-order-Order.php.md)
* [classes/order/OrderCarrier.php](file.classes-order-OrderCarrier.php.md)
* [classes/order/OrderCartRule.php](file.classes-order-OrderCartRule.php.md)
* [classes/order/OrderDetail.php](file.classes-order-OrderDetail.php.md)
* [classes/order/OrderDiscount.php](file.classes-order-OrderDiscount.php.md)
* [classes/order/OrderHistory.php](file.classes-order-OrderHistory.php.md)
* [classes/order/OrderInvoice.php](file.classes-order-OrderInvoice.php.md)
* [classes/order/OrderMessage.php](file.classes-order-OrderMessage.php.md)
* [classes/order/OrderPayment.php](file.classes-order-OrderPayment.php.md)
* [classes/order/OrderReturn.php](file.classes-order-OrderReturn.php.md)
* [classes/order/OrderReturnState.php](file.classes-order-OrderReturnState.php.md)
* [classes/order/OrderSlip.php](file.classes-order-OrderSlip.php.md)
* [classes/order/OrderState.php](file.classes-order-OrderState.php.md)
* [classes/pdf/HTMLTemplate.php](file.classes-pdf-HTMLTemplate.php.md)
* [classes/pdf/HTMLTemplateDeliverySlip.php](file.classes-pdf-HTMLTemplateDeliverySlip.php.md)
* [classes/pdf/HTMLTemplateInvoice.php](file.classes-pdf-HTMLTemplateInvoice.php.md)
* [classes/pdf/HTMLTemplateOrderReturn.php](file.classes-pdf-HTMLTemplateOrderReturn.php.md)
* [classes/pdf/HTMLTemplateOrderSlip.php](file.classes-pdf-HTMLTemplateOrderSlip.php.md)
* [classes/pdf/HTMLTemplateSupplyOrderForm.php](file.classes-pdf-HTMLTemplateSupplyOrderForm.php.md)
* [classes/pdf/PDF.php](file.classes-pdf-PDF.php.md)
* [classes/pdf/PDFGenerator.php](file.classes-pdf-PDFGenerator.php.md)
* [classes/range/RangePrice.php](file.classes-range-RangePrice.php.md)
* [classes/range/RangeWeight.php](file.classes-range-RangeWeight.php.md)
* [classes/shop/Shop.php](file.classes-shop-Shop.php.md)
* [classes/shop/ShopGroup.php](file.classes-shop-ShopGroup.php.md)
* [classes/shop/ShopUrl.php](file.classes-shop-ShopUrl.php.md)
* [classes/stock/Stock.php](file.classes-stock-Stock.php.md)
* [classes/stock/StockAvailable.php](file.classes-stock-StockAvailable.php.md)
* [classes/stock/StockManager.php](file.classes-stock-StockManager.php.md)
* [classes/stock/StockManagerFactory.php](file.classes-stock-StockManagerFactory.php.md)
* [classes/stock/StockManagerInterface.php](file.classes-stock-StockManagerInterface.php.md)
* [classes/stock/StockManagerModule.php](file.classes-stock-StockManagerModule.php.md)
* [classes/stock/StockMvt.php](file.classes-stock-StockMvt.php.md)
* [classes/stock/StockMvtReason.php](file.classes-stock-StockMvtReason.php.md)
* [classes/stock/StockMvtWS.php](file.classes-stock-StockMvtWS.php.md)
* [classes/stock/SupplyOrder.php](file.classes-stock-SupplyOrder.php.md)
* [classes/stock/SupplyOrderDetail.php](file.classes-stock-SupplyOrderDetail.php.md)
* [classes/stock/SupplyOrderHistory.php](file.classes-stock-SupplyOrderHistory.php.md)
* [classes/stock/SupplyOrderReceiptHistory.php](file.classes-stock-SupplyOrderReceiptHistory.php.md)
* [classes/stock/SupplyOrderState.php](file.classes-stock-SupplyOrderState.php.md)
* [classes/stock/Warehouse.php](file.classes-stock-Warehouse.php.md)
* [classes/stock/WarehouseProductLocation.php](file.classes-stock-WarehouseProductLocation.php.md)
* [classes/tax/Tax.php](file.classes-tax-Tax.php.md)
* [classes/tax/TaxCalculator.php](file.classes-tax-TaxCalculator.php.md)
* [classes/tax/TaxManagerFactory.php](file.classes-tax-TaxManagerFactory.php.md)
* [classes/tax/TaxManagerInterface.php](file.classes-tax-TaxManagerInterface.php.md)
* [classes/tax/TaxManagerModule.php](file.classes-tax-TaxManagerModule.php.md)
* [classes/tax/TaxRule.php](file.classes-tax-TaxRule.php.md)
* [classes/tax/TaxRulesGroup.php](file.classes-tax-TaxRulesGroup.php.md)
* [classes/tax/TaxRulesTaxManager.php](file.classes-tax-TaxRulesTaxManager.php.md)
* [classes/tree/ITreeToolbar.php](file.classes-tree-ITreeToolbar.php.md)
* [classes/tree/ITreeToolbarButton.php](file.classes-tree-ITreeToolbarButton.php.md)
* [classes/tree/Tree.php](file.classes-tree-Tree.php.md)
* [classes/tree/TreeToolbar.php](file.classes-tree-TreeToolbar.php.md)
* [classes/tree/TreeToolbarButton.php](file.classes-tree-TreeToolbarButton.php.md)
* [classes/tree/TreeToolbarLink.php](file.classes-tree-TreeToolbarLink.php.md)
* [classes/tree/TreeToolbarSearch.php](file.classes-tree-TreeToolbarSearch.php.md)
* [classes/tree/TreeToolbarSearchCategories.php](file.classes-tree-TreeToolbarSearchCategories.php.md)
* [classes/webservice/WebserviceException.php](file.classes-webservice-WebserviceException.php.md)
* [classes/webservice/WebserviceKey.php](file.classes-webservice-WebserviceKey.php.md)
* [classes/webservice/WebserviceOutputBuilder.php](file.classes-webservice-WebserviceOutputBuilder.php.md)
* [classes/webservice/WebserviceOutputInterface.php](file.classes-webservice-WebserviceOutputInterface.php.md)
* [classes/webservice/WebserviceOutputXML.php](file.classes-webservice-WebserviceOutputXML.php.md)
* [classes/webservice/WebserviceRequest.php](file.classes-webservice-WebserviceRequest.php.md)
* [classes/webservice/WebserviceSpecificManagementImages.php](file.classes-webservice-WebserviceSpecificManagementImages.php.md)
* [classes/webservice/WebserviceSpecificManagementInterface.php](file.classes-webservice-WebserviceSpecificManagementInterface.php.md)
* [classes/webservice/WebserviceSpecificManagementSearch.php](file.classes-webservice-WebserviceSpecificManagementSearch.php.md)
* [config/alias.php](file.config-alias.php.md)
* [config/smarty.config.inc.php](file.config-smarty.config.inc.php.md)
* [config/smartyadmin.config.inc.php](file.config-smartyadmin.config.inc.php.md)
* [config/smartyfront.config.inc.php](file.config-smartyfront.config.inc.php.md)
* [controllers/admin/AdminAccessController.php](file.controllers-admin-AdminAccessController.php.md)
* [controllers/admin/AdminAddonsCatalogController.php](file.controllers-admin-AdminAddonsCatalogController.php.md)
* [controllers/admin/AdminAddressesController.php](file.controllers-admin-AdminAddressesController.php.md)
* [controllers/admin/AdminAdminPreferencesController.php](file.controllers-admin-AdminAdminPreferencesController.php.md)
* [controllers/admin/AdminAttachmentsController.php](file.controllers-admin-AdminAttachmentsController.php.md)
* [controllers/admin/AdminAttributeGeneratorController.php](file.controllers-admin-AdminAttributeGeneratorController.php.md)
* [controllers/admin/AdminAttributesGroupsController.php](file.controllers-admin-AdminAttributesGroupsController.php.md)
* [controllers/admin/AdminBackupController.php](file.controllers-admin-AdminBackupController.php.md)
* [controllers/admin/AdminCarrierWizardController.php](file.controllers-admin-AdminCarrierWizardController.php.md)
* [controllers/admin/AdminCarriersController.php](file.controllers-admin-AdminCarriersController.php.md)
* [controllers/admin/AdminCartRulesController.php](file.controllers-admin-AdminCartRulesController.php.md)
* [controllers/admin/AdminCartsController.php](file.controllers-admin-AdminCartsController.php.md)
* [controllers/admin/AdminCategoriesController.php](file.controllers-admin-AdminCategoriesController.php.md)
* [controllers/admin/AdminCmsCategoriesController.php](file.controllers-admin-AdminCmsCategoriesController.php.md)
* [controllers/admin/AdminCmsContentController.php](file.controllers-admin-AdminCmsContentController.php.md)
* [controllers/admin/AdminCmsController.php](file.controllers-admin-AdminCmsController.php.md)
* [controllers/admin/AdminContactsController.php](file.controllers-admin-AdminContactsController.php.md)
* [controllers/admin/AdminCountriesController.php](file.controllers-admin-AdminCountriesController.php.md)
* [controllers/admin/AdminCurrenciesController.php](file.controllers-admin-AdminCurrenciesController.php.md)
* [controllers/admin/AdminCustomerPreferencesController.php](file.controllers-admin-AdminCustomerPreferencesController.php.md)
* [controllers/admin/AdminCustomerThreadsController.php](file.controllers-admin-AdminCustomerThreadsController.php.md)
* [controllers/admin/AdminCustomersController.php](file.controllers-admin-AdminCustomersController.php.md)
* [controllers/admin/AdminDashboardController.php](file.controllers-admin-AdminDashboardController.php.md)
* [controllers/admin/AdminDeliverySlipController.php](file.controllers-admin-AdminDeliverySlipController.php.md)
* [controllers/admin/AdminEmailsController.php](file.controllers-admin-AdminEmailsController.php.md)
* [controllers/admin/AdminEmployeesController.php](file.controllers-admin-AdminEmployeesController.php.md)
* [controllers/admin/AdminFeaturesController.php](file.controllers-admin-AdminFeaturesController.php.md)
* [controllers/admin/AdminGendersController.php](file.controllers-admin-AdminGendersController.php.md)
* [controllers/admin/AdminGeolocationController.php](file.controllers-admin-AdminGeolocationController.php.md)
* [controllers/admin/AdminGroupsController.php](file.controllers-admin-AdminGroupsController.php.md)
* [controllers/admin/AdminHomeController.php](file.controllers-admin-AdminHomeController.php.md)
* [controllers/admin/AdminImagesController.php](file.controllers-admin-AdminImagesController.php.md)
* [controllers/admin/AdminImportController.php](file.controllers-admin-AdminImportController.php.md)
* [controllers/admin/AdminInformationController.php](file.controllers-admin-AdminInformationController.php.md)
* [controllers/admin/AdminInvoicesController.php](file.controllers-admin-AdminInvoicesController.php.md)
* [controllers/admin/AdminLanguagesController.php](file.controllers-admin-AdminLanguagesController.php.md)
* [controllers/admin/AdminLocalizationController.php](file.controllers-admin-AdminLocalizationController.php.md)
* [controllers/admin/AdminLoginController.php](file.controllers-admin-AdminLoginController.php.md)
* [controllers/admin/AdminLogsController.php](file.controllers-admin-AdminLogsController.php.md)
* [controllers/admin/AdminMaintenanceController.php](file.controllers-admin-AdminMaintenanceController.php.md)
* [controllers/admin/AdminManufacturersController.php](file.controllers-admin-AdminManufacturersController.php.md)
* [controllers/admin/AdminMarketingController.php](file.controllers-admin-AdminMarketingController.php.md)
* [controllers/admin/AdminMetaController.php](file.controllers-admin-AdminMetaController.php.md)
* [controllers/admin/AdminModulesController.php](file.controllers-admin-AdminModulesController.php.md)
* [controllers/admin/AdminModulesPositionsController.php](file.controllers-admin-AdminModulesPositionsController.php.md)
* [controllers/admin/AdminNotFoundController.php](file.controllers-admin-AdminNotFoundController.php.md)
* [controllers/admin/AdminOrderMessageController.php](file.controllers-admin-AdminOrderMessageController.php.md)
* [controllers/admin/AdminOrderPreferencesController.php](file.controllers-admin-AdminOrderPreferencesController.php.md)
* [controllers/admin/AdminOrdersController.php](file.controllers-admin-AdminOrdersController.php.md)
* [controllers/admin/AdminOutstandingController.php](file.controllers-admin-AdminOutstandingController.php.md)
* [controllers/admin/AdminPPreferencesController.php](file.controllers-admin-AdminPPreferencesController.php.md)
* [controllers/admin/AdminPaymentController.php](file.controllers-admin-AdminPaymentController.php.md)
* [controllers/admin/AdminPdfController.php](file.controllers-admin-AdminPdfController.php.md)
* [controllers/admin/AdminPerformanceController.php](file.controllers-admin-AdminPerformanceController.php.md)
* [controllers/admin/AdminPreferencesController.php](file.controllers-admin-AdminPreferencesController.php.md)
* [controllers/admin/AdminProductsController.php](file.controllers-admin-AdminProductsController.php.md)
* [controllers/admin/AdminProfilesController.php](file.controllers-admin-AdminProfilesController.php.md)
* [controllers/admin/AdminQuickAccessesController.php](file.controllers-admin-AdminQuickAccessesController.php.md)
* [controllers/admin/AdminRangePriceController.php](file.controllers-admin-AdminRangePriceController.php.md)
* [controllers/admin/AdminRangeWeightController.php](file.controllers-admin-AdminRangeWeightController.php.md)
* [controllers/admin/AdminReferrersController.php](file.controllers-admin-AdminReferrersController.php.md)
* [controllers/admin/AdminRequestSqlController.php](file.controllers-admin-AdminRequestSqlController.php.md)
* [controllers/admin/AdminReturnController.php](file.controllers-admin-AdminReturnController.php.md)
* [controllers/admin/AdminScenesController.php](file.controllers-admin-AdminScenesController.php.md)
* [controllers/admin/AdminSearchConfController.php](file.controllers-admin-AdminSearchConfController.php.md)
* [controllers/admin/AdminSearchController.php](file.controllers-admin-AdminSearchController.php.md)
* [controllers/admin/AdminSearchEnginesController.php](file.controllers-admin-AdminSearchEnginesController.php.md)
* [controllers/admin/AdminShippingController.php](file.controllers-admin-AdminShippingController.php.md)
* [controllers/admin/AdminShopController.php](file.controllers-admin-AdminShopController.php.md)
* [controllers/admin/AdminShopGroupController.php](file.controllers-admin-AdminShopGroupController.php.md)
* [controllers/admin/AdminShopUrlController.php](file.controllers-admin-AdminShopUrlController.php.md)
* [controllers/admin/AdminSlipController.php](file.controllers-admin-AdminSlipController.php.md)
* [controllers/admin/AdminSpecificPriceRuleController.php](file.controllers-admin-AdminSpecificPriceRuleController.php.md)
* [controllers/admin/AdminStatesController.php](file.controllers-admin-AdminStatesController.php.md)
* [controllers/admin/AdminStatsController.php](file.controllers-admin-AdminStatsController.php.md)
* [controllers/admin/AdminStatsTabController.php](file.controllers-admin-AdminStatsTabController.php.md)
* [controllers/admin/AdminStatusesController.php](file.controllers-admin-AdminStatusesController.php.md)
* [controllers/admin/AdminStockConfigurationController.php](file.controllers-admin-AdminStockConfigurationController.php.md)
* [controllers/admin/AdminStockCoverController.php](file.controllers-admin-AdminStockCoverController.php.md)
* [controllers/admin/AdminStockInstantStateController.php](file.controllers-admin-AdminStockInstantStateController.php.md)
* [controllers/admin/AdminStockManagementController.php](file.controllers-admin-AdminStockManagementController.php.md)
* [controllers/admin/AdminStockMvtController.php](file.controllers-admin-AdminStockMvtController.php.md)
* [controllers/admin/AdminStoresController.php](file.controllers-admin-AdminStoresController.php.md)
* [controllers/admin/AdminSuppliersController.php](file.controllers-admin-AdminSuppliersController.php.md)
* [controllers/admin/AdminSupplyOrdersController.php](file.controllers-admin-AdminSupplyOrdersController.php.md)
* [controllers/admin/AdminTabsController.php](file.controllers-admin-AdminTabsController.php.md)
* [controllers/admin/AdminTagsController.php](file.controllers-admin-AdminTagsController.php.md)
* [controllers/admin/AdminTaxRulesGroupController.php](file.controllers-admin-AdminTaxRulesGroupController.php.md)
* [controllers/admin/AdminTaxesController.php](file.controllers-admin-AdminTaxesController.php.md)
* [controllers/admin/AdminThemesController.php](file.controllers-admin-AdminThemesController.php.md)
* [controllers/admin/AdminTrackingController.php](file.controllers-admin-AdminTrackingController.php.md)
* [controllers/admin/AdminTranslationsController.php](file.controllers-admin-AdminTranslationsController.php.md)
* [controllers/admin/AdminWarehousesController.php](file.controllers-admin-AdminWarehousesController.php.md)
* [controllers/admin/AdminWebserviceController.php](file.controllers-admin-AdminWebserviceController.php.md)
* [controllers/admin/AdminZonesController.php](file.controllers-admin-AdminZonesController.php.md)
* [controllers/front/AddressController.php](file.controllers-front-AddressController.php.md)
* [controllers/front/AddressesController.php](file.controllers-front-AddressesController.php.md)
* [controllers/front/AttachmentController.php](file.controllers-front-AttachmentController.php.md)
* [controllers/front/AuthController.php](file.controllers-front-AuthController.php.md)
* [controllers/front/BestSalesController.php](file.controllers-front-BestSalesController.php.md)
* [controllers/front/CartController.php](file.controllers-front-CartController.php.md)
* [controllers/front/CategoryController.php](file.controllers-front-CategoryController.php.md)
* [controllers/front/ChangeCurrencyController.php](file.controllers-front-ChangeCurrencyController.php.md)
* [controllers/front/CmsController.php](file.controllers-front-CmsController.php.md)
* [controllers/front/CompareController.php](file.controllers-front-CompareController.php.md)
* [controllers/front/ContactController.php](file.controllers-front-ContactController.php.md)
* [controllers/front/DiscountController.php](file.controllers-front-DiscountController.php.md)
* [controllers/front/GetFileController.php](file.controllers-front-GetFileController.php.md)
* [controllers/front/GuestTrackingController.php](file.controllers-front-GuestTrackingController.php.md)
* [controllers/front/HistoryController.php](file.controllers-front-HistoryController.php.md)
* [controllers/front/IdentityController.php](file.controllers-front-IdentityController.php.md)
* [controllers/front/IndexController.php](file.controllers-front-IndexController.php.md)
* [controllers/front/ManufacturerController.php](file.controllers-front-ManufacturerController.php.md)
* [controllers/front/MyAccountController.php](file.controllers-front-MyAccountController.php.md)
* [controllers/front/NewProductsController.php](file.controllers-front-NewProductsController.php.md)
* [controllers/front/OrderConfirmationController.php](file.controllers-front-OrderConfirmationController.php.md)
* [controllers/front/OrderController.php](file.controllers-front-OrderController.php.md)
* [controllers/front/OrderDetailController.php](file.controllers-front-OrderDetailController.php.md)
* [controllers/front/OrderFollowController.php](file.controllers-front-OrderFollowController.php.md)
* [controllers/front/OrderOpcController.php](file.controllers-front-OrderOpcController.php.md)
* [controllers/front/OrderReturnController.php](file.controllers-front-OrderReturnController.php.md)
* [controllers/front/OrderSlipController.php](file.controllers-front-OrderSlipController.php.md)
* [controllers/front/PageNotFoundController.php](file.controllers-front-PageNotFoundController.php.md)
* [controllers/front/ParentOrderController.php](file.controllers-front-ParentOrderController.php.md)
* [controllers/front/PasswordController.php](file.controllers-front-PasswordController.php.md)
* [controllers/front/PdfInvoiceController.php](file.controllers-front-PdfInvoiceController.php.md)
* [controllers/front/PdfOrderReturnController.php](file.controllers-front-PdfOrderReturnController.php.md)
* [controllers/front/PdfOrderSlipController.php](file.controllers-front-PdfOrderSlipController.php.md)
* [controllers/front/PricesDropController.php](file.controllers-front-PricesDropController.php.md)
* [controllers/front/ProductController.php](file.controllers-front-ProductController.php.md)
* [controllers/front/SearchController.php](file.controllers-front-SearchController.php.md)
* [controllers/front/SitemapController.php](file.controllers-front-SitemapController.php.md)
* [controllers/front/StatisticsController.php](file.controllers-front-StatisticsController.php.md)
* [controllers/front/StoresController.php](file.controllers-front-StoresController.php.md)
* [controllers/front/SupplierController.php](file.controllers-front-SupplierController.php.md)
* [images.inc.php](file.images.inc.php.md)
